--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,8 @@ body {
 
 main {
   padding: 36px;
+  max-width: 40rem;
+  margin: 2rem auto;
 }
 
 .header {
@@ -58,8 +60,37 @@ main {
   border: none;
   cursor: pointer;
 }
+.meme {
+  position: relative;
+}
 
 .meme--image {
   max-width: 100%;
   border-radius: 3px;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
